--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.box-sizing {
+body {
     box-sizing: border-box;
 }
 
-.container {
+#container {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -10,7 +10,7 @@
     align-items: center;
 }
 
-.game {
+#game {
     width: 500px;
     height: 500px;
     display: grid;
@@ -18,12 +18,12 @@
     grid-template-rows: repeat(3, 1fr);
 }
 
-.tc, .mc, .bc {
+#tc, #mc, #bc {
     border-left: 1px solid black;
     border-right: 1px solid black;
 }
 
-.ml, .mc, .mr {
+#ml, #mc, #mr {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
 }
