--- a/style.css
+++ b/style.css
@@ -27,3 +27,12 @@ body {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
 }
+
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    font-family: 'Poppins';
+    font-weight: 300;
+}
