--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body {
     box-sizing: border-box;
+    margin: 0;
+    font-family: 'Raleway', sans-serif;
+    font-size: 2rem;
+    color: grey;
 }
 
-#container {
+#main-container {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -10,22 +14,41 @@ body {
     align-items: center;
 }
 
+#game-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 75vh;
+    width: 60vw;
+}
+
+.hide {
+    display: none;
+}
+
+#winner {
+    color: rgb(0, 161, 0);
+}
+
 #game {
-    width: 500px;
-    height: 500px;
+    grid-area: game;
+    width: 350px;
+    height: 350px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    margin: 4rem 0;
 }
 
 #tc, #mc, #bc {
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    border-left: 5px solid rgb(155, 155, 155);
+    border-right: 5px solid rgb(155, 155, 155);
 }
 
 #ml, #mc, #mr {
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    border-top: 5px solid rgb(155, 155, 155);
+    border-bottom: 5px solid rgb(155, 155, 155);
 }
 
 .box {
@@ -35,4 +58,18 @@ body {
     font-size: 3rem;
     font-family: 'Poppins';
     font-weight: 300;
+}
+
+#reset-game {
+    padding: 1rem 2rem;
+    background: none;
+    border: 3px solid grey;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: grey;
+}
+
+#reset-game:hover {
+    background-color: black;
+    color: white;
 }
