--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 #game {
-    grid-area: game;
+    flex: 0 1 auto;
     width: 350px;
     height: 350px;
     display: grid;
@@ -56,7 +56,6 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 3rem;
-    font-family: 'Poppins';
     font-weight: 300;
 }
 
