--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
     font-size: 2rem;
     color: #E6E6EA;
     background-color: #2AB7CA;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 #main-container {
@@ -75,4 +78,13 @@ body {
 
 #reset-game:active {
     background-color: #114d55;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
 }
